<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_jobs"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_jobs" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_nav_map"
        android:title="@string/nav_map" />

    <item
        android:id="@+id/nav_publish"
        android:icon="@drawable/ic_nav_publish"
        android:title="@string/nav_publish" />

    <!-- Solo rol Trabajador: solicitudes + historial (se muestra por código). -->
    <item
        android:id="@+id/nav_trabajos"
        android:icon="@drawable/ic_tab_solicitudes"
        android:title="@string/nav_trabajos"
        android:visible="false" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_nav_messages"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>